--- a/debian/rules
+++ b/debian/rules
@@ -30,20 +30,9 @@ binary-arch: build
 	dh_installdirs
 	dh_install linux/scrotwm usr/bin
 	dh_installman scrotwm.1
-	dh_installexamples
+	dh_installexamples initscreen.sh baraction.sh screenshot.sh
 	dh_installchangelogs 
 	dh_installdocs
-#	dh_install
-#	dh_installmenu
-#	dh_installdebconf
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_python
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
 	dh_installman
 	dh_strip
 	dh_compress
