--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,7 @@ binary-arch: build
 	dh_testdir
 	dh_testroot
 	dh_installdirs
-	dh_install linux/scrotwm usr/bin
+	dh_install
 	dh_installman scrotwm.1
 	dh_installexamples initscreen.sh baraction.sh screenshot.sh
 	dh_installchangelogs 
