--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Package: scrotwm
 Architecture: any
 Provides: x-window-manager
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: dwm-tools
 Description: dynamic tiling window manager
  Scrotwm tries to stay out of the way so that valuable screen real estate can
  be used for much more important stuff.
