--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Provides: x-window-manager
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: dwm-tools
 Description: dynamic tiling window manager
- Scrotwm tries to stay out of the way so that valuable screen real estate can
- be used for much more important stuff.
+ Scrotwm is a minimalistic window manager that tries to stay out of the way so
+ that valuable screen real estate can be used for much more important stuff.
  .
  It has sane defaults and does not require one to learn a language to do any
  configuration.
