--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.peereboom.us/scrotwm/html/scrotwm.html
 Package: scrotwm
 Architecture: any
 Provides: x-window-manager
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: xfonts-terminus, ${shlibs:Depends}, ${misc:Depends}
 Recommends: dwm-tools
 Description: dynamic tiling window manager
  Scrotwm is a minimalistic window manager that tries to stay out of the way so
