--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Homepage: http://www.peereboom.us/scrotwm/html/scrotwm.html
 Package: scrotwm
 Architecture: any
 Provides: x-window-manager
-Depends: xfonts-terminus, ${shlibs:Depends}, ${misc:Depends}
-Recommends: dwm-tools
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: dwm-tools, xfonts-terminus
 Description: dynamic tiling window manager
  Scrotwm is a minimalistic window manager that tries to stay out of the way so
  that valuable screen real estate can be used for much more important stuff.
