--- a/debian/rules
+++ b/debian/rules
@@ -27,7 +27,7 @@ binary-arch: build
 	dh_install
 	dh_installexamples initscreen.sh baraction.sh screenshot.sh
 	dh_installchangelogs 
-	dh_installdocs
+	dh_installdocs debian/README.source
 	dh_installman scrotwm.1
 	dh_installwm scrotwm
 	dh_strip
