--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Package: scrotwm
 Architecture: any
 Provides: x-window-manager
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: dwm-tools, xfonts-terminus
+Recommends: dwm-tools, x-terminal-emulator | xterm, xfonts-terminus
 Description: dynamic tiling window manager
  Scrotwm is a minimalistic window manager that tries to stay out of the way so
  that valuable screen real estate can be used for much more important stuff.
