Use a separated clean-patched target instead of calling debian/rules recursively.

--- a/debian/rules
+++ b/debian/rules
@@ -9,14 +9,16 @@ build-stamp:
 	$(MAKE) -C linux/
 	touch $@
 
-clean:
+clean: clean-patched unpatch
+	dh_testdir
+	dh_testroot
+	dh_clean
+clean-patched:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
 	$(MAKE) -C linux/ clean
 	rm -f linux/scrotwm.c
-	./debian/rules unpatch
-	dh_clean
 
 binary: binary-indep binary-arch
 binary-indep: build
@@ -39,4 +41,4 @@ binary-arch: build
 	dh_md5sums
 	dh_builddeb
 
-.PHONY: build clean binary-indep binary-arch binary
+.PHONY: build clean clean-patched binary binary-indep binary-arch
