--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.14 2009/03/10 01:32:06 dwc Exp $
+# $scrotwm: scrotwm.conf,v 1.15 2009/05/25 22:04:56 dwc Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -87,3 +87,19 @@ dialog_ratio		= 0.6
 #bind[version]		= MOD+Shift+v
 #bind[spawn_lock]	= MOD+Shift+Delete
 #bind[spawn_initscr]	= MOD+Shift+i
+
+# quirks
+# remove with: quirk[class:name] = NONE
+#quirk[MPlayer:xv]			= FLOAT | FULLSCREEN
+#quirk[OpenOffice.org_2.4:VCLSalFrame]	= FLOAT
+#quirk[OpenOffice.org_3.0:VCLSalFrame]	= FLOAT
+#quirk[Firefox-bin:firefox-bin]		= TRANSSZ
+#quirk[Firefox:Dialog]			= FLOAT
+#quirk[Gimp:gimp]			= FLOAT | ANYWHERE
+#quirk[XTerm:xterm]			= XTERM_FONTADJ
+#quirk[xine:Xine_Window]			= FLOAT | ANYWHERE
+#quirk[Xitk:Xitk_Combo]			= FLOAT | ANYWHERE
+#quirk[xine:xine_Panel]			= FLOAT | ANYWHERE
+#quirk[Xitk:Xine_Window]			= FLOAT | ANYWHERE
+#quirk[xine:xine_Video_Fullscreen_Window] = FULLSCREEN | FLOAT
+#quirk[pcb:pcb]				= FLOAT
