--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
 Build-Depends: debhelper (>= 7), quilt, libx11-dev, libxrandr-dev
 Standards-Version: 3.8.1
-Homepage: http://www.peereboom.us/scrotwm/html/scrotwm.html
+Homepage: http://www.scrotwm.org/
 Vcs-Bzr: http://bzr.debian.org/collab-maint/scrotwm/trunk
 Vcs-Browser: http://bzr.debian.org/loggerhead/collab-maint/scrotwm
 
