--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.15 2009/05/25 22:04:56 dwc Exp $
+# $scrotwm: scrotwm.conf,v 1.19 2009/09/13 20:48:53 dwc Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -13,16 +13,20 @@ bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 #bar_action		= baraction.sh
 #bar_delay		= 1
 clock_enabled		= 1
+title_name_enabled	= 0
+title_class_enabled	= 0
 
 # spawn app
+# program[term]		= xterm
+# program[screenshot_all]	= screenshot.sh full
+# program[screenshot_wind]	= screenshot.sh window
+# program[lock]		= xlock
+# program[initscr]	= initscreen.sh
+# program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
 spawn_term		= xterm
 
 # dialog box size ratio .3 >= r < 1
 dialog_ratio		= 0.6
-
-# screen shots
-# screenshot_enabled	= 1
-# screenshot_app	= screenshot.sh
 
 # Split a non-Xrandr dual head setup into one region per monitor
 # (non-standard driver-based multihead is not seen by scrotwm)
@@ -48,7 +52,7 @@ dialog_ratio		= 0.6
 #bind[swap_next]		= MOD+Shift+j
 #bind[swap_prev]		= MOD+Shift+k
 #bind[spawn_term]	= MOD+Shift+Return
-#bind[spawn_menu]	= MOD+p
+#bind[menu]		= MOD+p
 #bind[quit]		= MOD+Shift+q
 #bind[restart]		= MOD+q
 #bind[focus_main]	= MOD+m
@@ -85,21 +89,25 @@ dialog_ratio		= 0.6
 #bind[screenshot_wind]	= MOD+Shift+s
 #bind[float_toggle]	= MOD+t
 #bind[version]		= MOD+Shift+v
-#bind[spawn_lock]	= MOD+Shift+Delete
-#bind[spawn_initscr]	= MOD+Shift+i
+#bind[lock]		= MOD+Shift+Delete
+#bind[initscr]		= MOD+Shift+i
 
 # quirks
 # remove with: quirk[class:name] = NONE
-#quirk[MPlayer:xv]			= FLOAT | FULLSCREEN
-#quirk[OpenOffice.org_2.4:VCLSalFrame]	= FLOAT
-#quirk[OpenOffice.org_3.0:VCLSalFrame]	= FLOAT
+#quirk[MPlayer:xv]			= FLOAT + FULLSCREEN
+#quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
+#quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
 #quirk[Firefox-bin:firefox-bin]		= TRANSSZ
 #quirk[Firefox:Dialog]			= FLOAT
-#quirk[Gimp:gimp]			= FLOAT | ANYWHERE
+#quirk[Gimp:gimp]			= FLOAT + ANYWHERE
 #quirk[XTerm:xterm]			= XTERM_FONTADJ
-#quirk[xine:Xine_Window]			= FLOAT | ANYWHERE
-#quirk[Xitk:Xitk_Combo]			= FLOAT | ANYWHERE
-#quirk[xine:xine_Panel]			= FLOAT | ANYWHERE
-#quirk[Xitk:Xine_Window]			= FLOAT | ANYWHERE
-#quirk[xine:xine_Video_Fullscreen_Window] = FULLSCREEN | FLOAT
+#quirk[xine:Xine Window]			= FLOAT + ANYWHERE
+#quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
+#quirk[xine:xine Panel]			= FLOAT + ANYWHERE
+#quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
+#quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 #quirk[pcb:pcb]				= FLOAT
+
+# EXAMPLE: define firefox program and bind to key
+# program[firefox]	= firefox http://scrotwm.org/
+# bind[firefox]		= MOD+f
