--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: scrotwm
 Section: x11
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
-Build-Depends: debhelper (>= 7), quilt, libx11-dev, libxrandr-dev
+Build-Depends: debhelper (>= 7), quilt, libx11-dev, libxt-dev, libxrandr-dev
 Standards-Version: 3.8.3
 Homepage: http://www.scrotwm.org/
 Vcs-Bzr: http://bzr.debian.org/collab-maint/scrotwm/trunk
