--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.19 2009/09/13 20:48:53 dwc Exp $
+# $scrotwm: scrotwm.conf,v 1.20 2009/09/23 03:53:09 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -97,6 +97,7 @@ dialog_ratio		= 0.6
 #quirk[MPlayer:xv]			= FLOAT + FULLSCREEN
 #quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 #quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
+#quirk[OpenOffice.org 3.1:VCLSalFrame]	= FLOAT
 #quirk[Firefox-bin:firefox-bin]		= TRANSSZ
 #quirk[Firefox:Dialog]			= FLOAT
 #quirk[Gimp:gimp]			= FLOAT + ANYWHERE
