Imported Upstream version 0.9.9

--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.20 2009/09/23 03:53:09 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.21 2009/10/02 19:50:05 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -12,6 +12,7 @@ bar_font_color[1]	= rgb:a0/a0/a0
 bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 #bar_action		= baraction.sh
 #bar_delay		= 1
+stack_enabled		= 1
 clock_enabled		= 1
 title_name_enabled	= 0
 title_class_enabled	= 0
