--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.21 2009/10/02 19:50:05 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.22 2009/11/25 15:13:29 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -34,7 +34,7 @@ dialog_ratio		= 0.6
 # region		= screen[1]:1280x1024+0+0
 # region		= screen[1]:1280x1024+1280+0
 
-# mod key, (windows key is Mod4)
+# mod key, (windows key is Mod4) (apple key on OSX is Mod2)
 # modkey = Mod1
 
 # key bindings
