--- a/debian/rules
+++ b/debian/rules
@@ -38,6 +38,9 @@ binary-arch: build
 	dh_installman --language=it scrotwm_it.1
 	mv $(CURDIR)/debian/scrotwm/usr/share/man/it/man1/scrotwm_it.1 \
 	   $(CURDIR)/debian/scrotwm/usr/share/man/it/man1/scrotwm.1
+	dh_installman --language=ru scrotwm_ru.1
+	mv $(CURDIR)/debian/scrotwm/usr/share/man/ru/man1/scrotwm_ru.1 \
+	   $(CURDIR)/debian/scrotwm/usr/share/man/ru/man1/scrotwm.1
 	dh_installwm scrotwm
 	dh_strip
 	dh_compress
