Imported Upstream version 0.9.23

--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.22 2009/11/25 15:13:29 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.23 2010/01/13 21:48:35 dwc Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -14,6 +14,7 @@ bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 #bar_delay		= 1
 stack_enabled		= 1
 clock_enabled		= 1
+#clock_format		= %a %b %d %R %Z %Y
 title_name_enabled	= 0
 title_class_enabled	= 0
 
