Imported Upstream version 0.9.24

--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.23 2010/01/13 21:48:35 dwc Exp $
+# $scrotwm: scrotwm.conf,v 1.24 2010/06/30 00:09:19 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -17,6 +17,7 @@ clock_enabled		= 1
 #clock_format		= %a %b %d %R %Z %Y
 title_name_enabled	= 0
 title_class_enabled	= 0
+#focus_mode		= default
 
 # spawn app
 # program[term]		= xterm
