--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.24 2010/06/30 00:09:19 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.25 2010/07/01 23:44:16 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -18,6 +18,7 @@ clock_enabled		= 1
 title_name_enabled	= 0
 title_class_enabled	= 0
 #focus_mode		= default
+#disable_border		= 1
 
 # spawn app
 # program[term]		= xterm
