--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.25 2010/07/01 23:44:16 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.26 2010/07/15 14:03:04 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -12,6 +12,7 @@ bar_font_color[1]	= rgb:a0/a0/a0
 bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 #bar_action		= baraction.sh
 #bar_delay		= 1
+#bar_at_bottom		= 1
 stack_enabled		= 1
 clock_enabled		= 1
 #clock_format		= %a %b %d %R %Z %Y
