--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Package: scrotwm
 Architecture: any
 Provides: x-window-manager
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: dwm-tools, xterm | x-terminal-emulator, xfonts-terminus
+Recommends: suckless-tools, xterm | x-terminal-emulator, xfonts-terminus
 Description: dynamic tiling window manager
  Scrotwm is a minimalistic window manager that tries to stay out of the way so
  that valuable screen real estate can be used for much more important stuff.
