--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.26 2010/07/15 14:03:04 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.27 2011/01/18 19:43:12 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -18,6 +18,7 @@ clock_enabled		= 1
 #clock_format		= %a %b %d %R %Z %Y
 title_name_enabled	= 0
 title_class_enabled	= 0
+window_name_enabled	= 0
 #focus_mode		= default
 #disable_border		= 1
 
