Imported Upstream version 0.9.30

--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.27 2011/01/18 19:43:12 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.29 2011/06/14 15:47:57 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -6,6 +6,7 @@ color_unfocus		= rgb:88/88/88
 
 # bar settings
 bar_enabled		= 1
+bar_border_width	= 1
 bar_border[1]		= rgb:00/80/80
 bar_color[1]		= black
 bar_font_color[1]	= rgb:a0/a0/a0
@@ -21,6 +22,7 @@ title_class_enabled	= 0
 window_name_enabled	= 0
 #focus_mode		= default
 #disable_border		= 1
+#border_width			= 1
 
 # spawn app
 # program[term]		= xterm
@@ -100,7 +102,7 @@ dialog_ratio		= 0.6
 
 # quirks
 # remove with: quirk[class:name] = NONE
-#quirk[MPlayer:xv]			= FLOAT + FULLSCREEN
+#quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
 #quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 #quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
 #quirk[OpenOffice.org 3.1:VCLSalFrame]	= FLOAT
