--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
 Build-Depends: debhelper (>= 7), libx11-dev, libxt-dev, libxrandr-dev
 Standards-Version: 3.9.1
-Homepage: http://www.scrotwm.org/
+Homepage: http://opensource.conformal.com/wiki/Scrotwm
 Vcs-Git: git://git.debian.org/collab-maint/scrotwm.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/scrotwm.git;a=summary
 
