--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,9 @@
 
 DESTDIR=$(CURDIR)/debian/scrotwm
 
-build: build-stamp
+build: build-indep build-arch
+build-indep: build-stamp
+build-arch: build-stamp
 build-stamp:
 	dh_testdir
 	$(MAKE) -C linux/ PREFIX=/usr \
