--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.29 2011/06/14 15:47:57 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.30 2011/06/23 02:22:18 marco Exp $
 #
 # colors for focussed and unfocussed window borders
 color_focus		= red
@@ -40,6 +40,9 @@ dialog_ratio		= 0.6
 # (non-standard driver-based multihead is not seen by scrotwm)
 # region		= screen[1]:1280x1024+0+0
 # region		= screen[1]:1280x1024+1280+0
+
+# Launch applications in a workspace of choice
+# autorun		= ws[1]:xterm
 
 # mod key, (windows key is Mod4) (apple key on OSX is Mod2)
 # modkey = Mod1
