--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,6 +1,10 @@
-# $scrotwm: scrotwm.conf,v 1.30 2011/06/23 02:22:18 marco Exp $
-#
+# $scrotwm: scrotwm.conf,v 1.36 2011/07/19 21:28:15 marco Exp $
+
+# PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
+# http://opensource.conformal.com/cgi-bin/man-cgi?scrotwm
+
 # colors for focussed and unfocussed window borders
+# NOTE: all colors in this file are in hex! see XQueryColor for examples
 color_focus		= red
 color_unfocus		= rgb:88/88/88
 
@@ -20,6 +24,7 @@ clock_enabled		= 1
 title_name_enabled	= 0
 title_class_enabled	= 0
 window_name_enabled	= 0
+#verbose_layout		= 1
 #focus_mode		= default
 #disable_border		= 1
 #border_width			= 1
@@ -43,6 +48,12 @@ dialog_ratio		= 0.6
 
 # Launch applications in a workspace of choice
 # autorun		= ws[1]:xterm
+# autorun		= ws[2]:xxxterm http://www.openbsd.org
+
+# workspace layout
+# layout		= ws[1]:4:0:0:0:vertical
+# layout		= ws[2]:0:0:0:0:horizontal
+# layout		= ws[3]:0:0:0:0:fullscreen
 
 # mod key, (windows key is Mod4) (apple key on OSX is Mod2)
 # modkey = Mod1
@@ -102,6 +113,9 @@ dialog_ratio		= 0.6
 #bind[version]		= MOD+Shift+v
 #bind[lock]		= MOD+Shift+Delete
 #bind[initscr]		= MOD+Shift+i
+#bind[iconify]		= MOD+w
+#bind[uniconify]	= MOD+Shift+w
+#bind[raise_toggle]	= MOD+Shift+r
 
 # quirks
 # remove with: quirk[class:name] = NONE
