--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,4 +1,4 @@
-# $scrotwm: scrotwm.conf,v 1.36 2011/07/19 21:28:15 marco Exp $
+# $scrotwm: scrotwm.conf,v 1.38 2011/08/08 22:41:51 marco Exp $
 
 # PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
 # http://opensource.conformal.com/cgi-bin/man-cgi?scrotwm
@@ -27,7 +27,8 @@ window_name_enabled	= 0
 #verbose_layout		= 1
 #focus_mode		= default
 #disable_border		= 1
-#border_width			= 1
+#border_width		= 1
+#urgent_enabled		= 1
 
 # spawn app
 # program[term]		= xterm
@@ -116,6 +117,7 @@ dialog_ratio		= 0.6
 #bind[iconify]		= MOD+w
 #bind[uniconify]	= MOD+Shift+w
 #bind[raise_toggle]	= MOD+Shift+r
+#bind[button2]		= MOD+v
 
 # quirks
 # remove with: quirk[class:name] = NONE
