--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: scrotwm
 Section: x11
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
-Build-Depends: debhelper (>= 7), libx11-dev, libxt-dev, libxrandr-dev
+Build-Depends: debhelper (>= 7), libx11-dev, libxt-dev, libxrandr-dev, libxtst-dev
 Standards-Version: 3.9.2
 Homepage: http://opensource.conformal.com/wiki/Scrotwm
 Vcs-Git: git://git.debian.org/collab-maint/scrotwm.git
