--- a/freebsd/Makefile
+++ b/freebsd/Makefile
@@ -1,15 +1,17 @@
-CFLAGS+= -Wall -ggdb -D_GNU_SOURCE -I.
-CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
-LDADD+= -lX11 -lXrandr -lXtst
-
-PREFIX?= /usr/local
 BINDIR?= $(PREFIX)/bin
 LIBDIR?= $(PREFIX)/lib
 MANDIR?= $(PREFIX)/share/man
 
-CC= gcc
+LVERS!=	awk -F = '/major/ { printf( "%s.", $$2 ) } /minor/ { printf( "%s", $$2 ) }' ${.CURDIR}/../lib/shlib_version
+BUILDVERSION!= sh "${.CURDIR}/../buildver.sh"
+.if !${BUILDVERSION} == ""
+CFLAGS+= -DSCROTWM_BUILDSTR=\"$(BUILDVERSION)\"
+.endif
 
-LVERS= $(shell . ../lib/shlib_version; echo $$major.$$minor)
+CFLAGS+= -Wall -Wno-uninitialized -I. -I${X11BASE}/include
+CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
+LDADD+= -lutil -L${X11BASE}/lib -lX11 -lXrandr -lXtst
+
 
 all: scrotwm libswmhack.so.$(LVERS)
 
@@ -20,14 +22,14 @@ scrotwm.c:
 swm_hack.c:
 	ln -sf ../lib/swm_hack.c
 
-scrotwm: scrotwm.o linux.o
-	$(CC) $(LDFLAGS) -o $@ $+ $(LDADD)
+scrotwm: scrotwm.o
+	$(CC) $(LDFLAGS) $(LDADD) -o ${.TARGET} ${.ALLSRC}
 
-%.so: %.c
-	$(CC) $(CFLAGS) -c -fpic -DPIC $+ -o $@
+swm_hack.so: swm_hack.c
+	$(CC) $(CFLAGS) -c -shared -fpic -DPIC -o ${.TARGET} ${.ALLSRC}
 
 libswmhack.so.$(LVERS): swm_hack.so
-	$(CC) -shared -fpic -o libswmhack.so.$(LVERS) swm_hack.so $(LDADD)
+	$(CC) $(LDFLAGS) -shared -fpic -o ${.TARGET} ${.ALLSRC}
 
 install: all
 	install -m 755 -d $(DESTDIR)$(BINDIR)
@@ -42,6 +44,6 @@ install: all
 	install -m 644 ../scrotwm_ru.1 $(DESTDIR)$(MANDIR)/man1/scrotwm_ru.1
 
 clean:
-	rm -f scrotwm *.o *.so libswmhack.so.* scrotwm.c swm_hack.c
+	rm -f scrotwm *.o *.so libswmhack.so.* scrotwm.c swm_hack.c version.h
 
-.PHONY: all install clean
+.include <bsd.port.mk>
