--- a/scrotwm.conf
+++ b/scrotwm.conf
@@ -1,5 +1,3 @@
-# $scrotwm: scrotwm.conf,v 1.38 2011/08/08 22:41:51 marco Exp $
-
 # PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
 # http://opensource.conformal.com/cgi-bin/man-cgi?scrotwm
 
@@ -17,6 +15,7 @@ bar_font_color[1]	= rgb:a0/a0/a0
 bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 #bar_action		= baraction.sh
 #bar_delay		= 1
+#bar_justify		= left
 #bar_at_bottom		= 1
 stack_enabled		= 1
 clock_enabled		= 1
@@ -59,65 +58,9 @@ dialog_ratio		= 0.6
 # mod key, (windows key is Mod4) (apple key on OSX is Mod2)
 # modkey = Mod1
 
-# key bindings
-# unbind with: bind[] = <keys>
-#bind[cycle_layout]	= MOD+space
-#bind[stack_reset]	= MOD+Shift+space
-#bind[master_shrink]	= MOD+h
-#bind[master_grow]	= MOD+l
-#bind[master_add]	= MOD+comma
-#bind[master_del]	= MOD+period
-#bind[stack_inc]		= MOD+Shift+comma
-#bind[stack_dec]		= MOD+Shift+period
-#bind[swap_main]		= MOD+Return
-#bind[focus_next]	= MOD+j
-#bind[focus_prev]	= MOD+k
-#bind[swap_next]		= MOD+Shift+j
-#bind[swap_prev]		= MOD+Shift+k
-#bind[spawn_term]	= MOD+Shift+Return
-#bind[menu]		= MOD+p
-#bind[quit]		= MOD+Shift+q
-#bind[restart]		= MOD+q
-#bind[focus_main]	= MOD+m
-#bind[ws_1]		= MOD+1
-#bind[ws_2]		= MOD+2
-#bind[ws_3]		= MOD+3
-#bind[ws_4]		= MOD+4
-#bind[ws_5]		= MOD+5
-#bind[ws_6]		= MOD+6
-#bind[ws_7]		= MOD+7
-#bind[ws_8]		= MOD+8
-#bind[ws_9]		= MOD+9
-#bind[ws_10]		= MOD+0
-#bind[ws_next]		= MOD+Right
-#bind[ws_prev]		= MOD+Left
-#bind[screen_next]	= MOD+Shift+Right
-#bind[screen_prev]	= MOD+Shift+Left
-#bind[mvws_1]		= MOD+Shift+1
-#bind[mvws_2]		= MOD+Shift+2
-#bind[mvws_3]		= MOD+Shift+3
-#bind[mvws_4]		= MOD+Shift+4
-#bind[mvws_5]		= MOD+Shift+5
-#bind[mvws_6]		= MOD+Shift+6
-#bind[mvws_7]		= MOD+Shift+7
-#bind[mvws_8]		= MOD+Shift+8
-#bind[mvws_9]		= MOD+Shift+9
-#bind[mvws_10]		= MOD+Shift+0
-#bind[bar_toggle]	= MOD+b
-#bind[focus_next]	= MOD+Tab
-#bind[focus_prev]	= MOD+Shift+Tab
-#bind[wind_kill]		= MOD+Shift+x
-#bind[wind_del]		= MOD+x
-#bind[screenshot_all]	= MOD+s
-#bind[screenshot_wind]	= MOD+Shift+s
-#bind[float_toggle]	= MOD+t
-#bind[version]		= MOD+Shift+v
-#bind[lock]		= MOD+Shift+Delete
-#bind[initscr]		= MOD+Shift+i
-#bind[iconify]		= MOD+w
-#bind[uniconify]	= MOD+Shift+w
-#bind[raise_toggle]	= MOD+Shift+r
-#bind[button2]		= MOD+v
+# Clear key bindings and load new key bindings from the specified file.
+# This allows you to load pre-defined key bindings for your keyboard layout.
+# keyboard_mapping = ~/.scrotwm_us.conf
 
 # quirks
 # remove with: quirk[class:name] = NONE
@@ -138,4 +81,4 @@ dialog_ratio		= 0.6
 
 # EXAMPLE: define firefox program and bind to key
 # program[firefox]	= firefox http://scrotwm.org/
-# bind[firefox]		= MOD+f
+# bind[firefox]		= MOD+Shift+b
