--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Andrea Bolognani <eof@kiyuko.org>
 Build-Depends: debhelper (>= 7), dpkg-dev (>= 1.16.1~), libx11-dev, libxt-dev, libxrandr-dev, libxtst-dev
 Standards-Version: 3.9.2
 Homepage: http://opensource.conformal.com/wiki/Scrotwm
-Vcs-Git: git://git.debian.org/collab-maint/scrotwm.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/scrotwm.git;a=summary
+Vcs-Git: git://anonscm.debian.org/collab-maint/scrotwm.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/scrotwm.git;a=summary
 
 Package: scrotwm
 Architecture: any
