--- a/scrotwm_cz.conf
+++ b/scrotwm_cz.conf
@@ -32,6 +32,7 @@ bind[ws_next]		= MOD+Right
 bind[ws_prev]		= MOD+Left
 bind[ws_next_all]	= MOD+Up
 bind[ws_prev_all]	= MOD+Down
+bind[ws_prior]		= MOD+a
 bind[screen_next]	= MOD+Shift+Right
 bind[screen_prev]	= MOD+Shift+Left
 bind[mvws_1]		= MOD+Shift+plus
