Use consistent naming everywhere.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
 Build-Depends: debhelper (>= 7), dpkg-dev (>= 1.16.1~), libx11-dev, libxt-dev, libxrandr-dev, libxtst-dev
 Standards-Version: 3.9.2
-Homepage: http://opensource.conformal.com/wiki/Scrotwm
+Homepage: http://opensource.conformal.com/wiki/scrotwm
 Vcs-Git: git://anonscm.debian.org/collab-maint/scrotwm.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/scrotwm.git;a=summary
 
