Imported Upstream version 1.0.0

--- a/spectrwm_es.conf
+++ b/spectrwm_es.conf
@@ -1,6 +1,7 @@
-# Key bindings for Swedish (se) keyboards
+# Key bindings for Spanish (es) keyboards
 # unbind with: bind[] = <keys>
 bind[cycle_layout]	= MOD+space
+bind[flip_layout]	= MOD+Shift+backslash
 bind[stack_reset]	= MOD+Shift+space
 bind[master_shrink]	= MOD+h
 bind[master_grow]	= MOD+l
@@ -60,14 +61,14 @@ bind[iconify]		= MOD+w
 bind[uniconify]		= MOD+Shift+w
 bind[raise_toggle]	= MOD+Shift+r
 bind[button2]		= MOD+v
-bind[width_shrink]	= MOD+plus
-bind[width_grow]	= MOD+dead_acute
-bind[height_shrink]	= MOD+Shift+plus
-bind[height_grow]	= MOD+Shift+dead_acute
-bind[move_left]		= MOD+aring
-bind[move_right]	= MOD+dead_diaeresis
-bind[move_up]		= MOD+Shift+aring
-bind[move_down]		= MOD+Shift+dead_diaeresis
-bind[name_workspace]	= MOD+Shift+minus
-bind[search_workspace]	= MOD+minus
+bind[width_shrink]	= MOD+apostrophe
+bind[width_grow]	= MOD+exclamdown
+bind[height_shrink]	= MOD+Shift+apostrophe
+bind[height_grow]	= MOD+Shift+exclamdown
+bind[move_left]		= MOD+dead_grave
+bind[move_right]	= MOD+plus
+bind[move_up]		= MOD+Shift+dead_grave
+bind[move_down]		= MOD+Shift+plus
+bind[name_workspace]	= MOD+Shift+slash
+bind[search_workspace]	= MOD+slash
 bind[search_win]	= MOD+f
