--- a/spectrwm_fr_ch.conf
+++ b/spectrwm_fr_ch.conf
@@ -1,6 +1,7 @@
-# Key bindings for United States (us) keyboards
+# Key bindings for Swiss French (FR_CH) keyboards
 # unbind with: bind[] = <keys>
 bind[cycle_layout]	= MOD+space
+bind[flip_layout]	= MOD+Shift+backslash
 bind[stack_reset]	= MOD+Shift+space
 bind[master_shrink]	= MOD+h
 bind[master_grow]	= MOD+l
@@ -61,13 +62,13 @@ bind[uniconify]		= MOD+Shift+w
 bind[raise_toggle]	= MOD+Shift+r
 bind[button2]		= MOD+v
 bind[width_shrink]	= MOD+minus
-bind[width_grow]	= MOD+equal
+bind[width_grow]	= MOD+egrave
 bind[height_shrink]	= MOD+Shift+minus
-bind[height_grow]	= MOD+Shift+equal
-bind[move_left]		= MOD+bracketleft
-bind[move_right]	= MOD+bracketright
-bind[move_up]		= MOD+Shift+bracketleft
-bind[move_down]		= MOD+Shift+bracketright
-bind[name_workspace]	= MOD+Shift+slash
-bind[search_workspace]	= MOD+slash
+bind[height_grow]	= MOD+Shift+egrave
+bind[move_left]		= MOD+eacute
+bind[move_right]	= MOD+agrave
+bind[move_up]		= MOD+Shift+eacute
+bind[move_down]		= MOD+Shift+agrave
+bind[name_workspace]	= MOD+Shift+apostrophe
+bind[search_workspace]	= MOD+apostrophe
 bind[search_win]	= MOD+f
