--- a/spectrwm_cz.conf
+++ b/spectrwm_cz.conf
@@ -1,6 +1,7 @@
-# Key bindings for Spanish (es) keyboards
+# Key bindings for Czech Republic (cz) keyboards
 # unbind with: bind[] = <keys>
 bind[cycle_layout]	= MOD+space
+bind[flip_layout]	= MOD+Shift+backslash
 bind[stack_reset]	= MOD+Shift+space
 bind[master_shrink]	= MOD+h
 bind[master_grow]	= MOD+l
@@ -18,16 +19,16 @@ bind[menu]		= MOD+p
 bind[quit]		= MOD+Shift+q
 bind[restart]		= MOD+q
 bind[focus_main]	= MOD+m
-bind[ws_1]		= MOD+1
-bind[ws_2]		= MOD+2
-bind[ws_3]		= MOD+3
-bind[ws_4]		= MOD+4
-bind[ws_5]		= MOD+5
-bind[ws_6]		= MOD+6
-bind[ws_7]		= MOD+7
-bind[ws_8]		= MOD+8
-bind[ws_9]		= MOD+9
-bind[ws_10]		= MOD+0
+bind[ws_1]		= MOD+plus
+bind[ws_2]		= MOD+ecaron
+bind[ws_3]		= MOD+scaron
+bind[ws_4]		= MOD+ccaron
+bind[ws_5]		= MOD+rcaron
+bind[ws_6]		= MOD+zcaron
+bind[ws_7]		= MOD+yacute
+bind[ws_8]		= MOD+aacute
+bind[ws_9]		= MOD+iacute
+bind[ws_10]		= MOD+eacute
 bind[ws_next]		= MOD+Right
 bind[ws_prev]		= MOD+Left
 bind[ws_next_all]	= MOD+Up
@@ -35,16 +36,16 @@ bind[ws_prev_all]	= MOD+Down
 bind[ws_prior]		= MOD+a
 bind[screen_next]	= MOD+Shift+Right
 bind[screen_prev]	= MOD+Shift+Left
-bind[mvws_1]		= MOD+Shift+1
-bind[mvws_2]		= MOD+Shift+2
-bind[mvws_3]		= MOD+Shift+3
-bind[mvws_4]		= MOD+Shift+4
-bind[mvws_5]		= MOD+Shift+5
-bind[mvws_6]		= MOD+Shift+6
-bind[mvws_7]		= MOD+Shift+7
-bind[mvws_8]		= MOD+Shift+8
-bind[mvws_9]		= MOD+Shift+9
-bind[mvws_10]		= MOD+Shift+0
+bind[mvws_1]		= MOD+Shift+plus
+bind[mvws_2]		= MOD+Shift+ecaron
+bind[mvws_3]		= MOD+Shift+scaron
+bind[mvws_4]		= MOD+Shift+ccaron
+bind[mvws_5]		= MOD+Shift+rcaron
+bind[mvws_6]		= MOD+Shift+zcaron
+bind[mvws_7]		= MOD+Shift+yacute
+bind[mvws_8]		= MOD+Shift+aacute
+bind[mvws_9]		= MOD+Shift+iacute
+bind[mvws_10]		= MOD+Shift+eacute
 bind[bar_toggle]	= MOD+b
 bind[focus_next]	= MOD+Tab
 bind[focus_prev]	= MOD+Shift+Tab
@@ -60,14 +61,14 @@ bind[iconify]		= MOD+w
 bind[uniconify]		= MOD+Shift+w
 bind[raise_toggle]	= MOD+Shift+r
 bind[button2]		= MOD+v
-bind[width_shrink]	= MOD+apostrophe
-bind[width_grow]	= MOD+exclamdown
-bind[height_shrink]	= MOD+Shift+apostrophe
-bind[height_grow]	= MOD+Shift+exclamdown
-bind[move_left]		= MOD+dead_grave
-bind[move_right]	= MOD+plus
-bind[move_up]		= MOD+Shift+dead_grave
-bind[move_down]		= MOD+Shift+plus
+bind[width_shrink]	= MOD+equal
+bind[width_grow]	= MOD+dead_acute
+bind[height_shrink]	= MOD+Shift+equal
+bind[height_grow]	= MOD+Shift+dead_acute
+bind[move_left]		= MOD+uacute
+bind[move_right]	= MOD+parenright
+bind[move_up]		= MOD+Shift+uacute
+bind[move_down]		= MOD+Shift+parenright
 bind[name_workspace]	= MOD+Shift+slash
 bind[search_workspace]	= MOD+slash
 bind[search_win]	= MOD+f
