--- a/spectrwm_se.conf
+++ b/spectrwm_se.conf
@@ -1,13 +1,14 @@
-# Key bindings for French (fr) keyboards
+# Key bindings for Swedish (se) keyboards
 # unbind with: bind[] = <keys>
 bind[cycle_layout]	= MOD+space
+bind[flip_layout]	= MOD+Shift+apostrophe
 bind[stack_reset]	= MOD+Shift+space
 bind[master_shrink]	= MOD+h
 bind[master_grow]	= MOD+l
 bind[master_add]	= MOD+comma
-bind[master_del]	= MOD+semicolon
+bind[master_del]	= MOD+period
 bind[stack_inc]		= MOD+Shift+comma
-bind[stack_dec]		= MOD+Shift+semicolon
+bind[stack_dec]		= MOD+Shift+period
 bind[swap_main]		= MOD+Return
 bind[focus_next]	= MOD+j
 bind[focus_prev]	= MOD+k
@@ -18,16 +19,16 @@ bind[menu]		= MOD+p
 bind[quit]		= MOD+Shift+q
 bind[restart]		= MOD+q
 bind[focus_main]	= MOD+m
-bind[ws_1]		= MOD+ampersand
-bind[ws_2]		= MOD+eacute
-bind[ws_3]		= MOD+quotedbl
-bind[ws_4]		= MOD+apostrophe
-bind[ws_5]		= MOD+parenleft
-bind[ws_6]		= MOD+hyphen
-bind[ws_7]		= MOD+egrave
-bind[ws_8]		= MOD+underscore
-bind[ws_9]		= MOD+ccedilla
-bind[ws_10]		= MOD+agrave
+bind[ws_1]		= MOD+1
+bind[ws_2]		= MOD+2
+bind[ws_3]		= MOD+3
+bind[ws_4]		= MOD+4
+bind[ws_5]		= MOD+5
+bind[ws_6]		= MOD+6
+bind[ws_7]		= MOD+7
+bind[ws_8]		= MOD+8
+bind[ws_9]		= MOD+9
+bind[ws_10]		= MOD+0
 bind[ws_next]		= MOD+Right
 bind[ws_prev]		= MOD+Left
 bind[ws_next_all]	= MOD+Up
@@ -35,16 +36,16 @@ bind[ws_prev_all]	= MOD+Down
 bind[ws_prior]		= MOD+a
 bind[screen_next]	= MOD+Shift+Right
 bind[screen_prev]	= MOD+Shift+Left
-bind[mvws_1]		= MOD+Shift+ampersand
-bind[mvws_2]		= MOD+Shift+eacute
-bind[mvws_3]		= MOD+Shift+quotedbl
-bind[mvws_4]		= MOD+Shift+apostrophe
-bind[mvws_5]		= MOD+Shift+parenleft
-bind[mvws_6]		= MOD+Shift+hyphen
-bind[mvws_7]		= MOD+Shift+egrave
-bind[mvws_8]		= MOD+Shift+underscore
-bind[mvws_9]		= MOD+Shift+ccedilla
-bind[mvws_10]		= MOD+Shift+agrave
+bind[mvws_1]		= MOD+Shift+1
+bind[mvws_2]		= MOD+Shift+2
+bind[mvws_3]		= MOD+Shift+3
+bind[mvws_4]		= MOD+Shift+4
+bind[mvws_5]		= MOD+Shift+5
+bind[mvws_6]		= MOD+Shift+6
+bind[mvws_7]		= MOD+Shift+7
+bind[mvws_8]		= MOD+Shift+8
+bind[mvws_9]		= MOD+Shift+9
+bind[mvws_10]		= MOD+Shift+0
 bind[bar_toggle]	= MOD+b
 bind[focus_next]	= MOD+Tab
 bind[focus_prev]	= MOD+Shift+Tab
@@ -60,14 +61,14 @@ bind[iconify]		= MOD+w
 bind[uniconify]		= MOD+Shift+w
 bind[raise_toggle]	= MOD+Shift+r
 bind[button2]		= MOD+v
-bind[width_shrink]	= MOD+minus
-bind[width_grow]	= MOD+equal
-bind[height_shrink]	= MOD+Shift+minus
-bind[height_grow]	= MOD+Shift+equal
-bind[move_left]		= MOD+ugrave
-bind[move_right]	= MOD+asterisk
-bind[move_up]		= MOD+Shift+ugrave
-bind[move_down]		= MOD+Shift+asterisk
-bind[name_workspace]	= MOD+Shift+slash
-bind[search_workspace]	= MOD+slash
+bind[width_shrink]	= MOD+plus
+bind[width_grow]	= MOD+dead_acute
+bind[height_shrink]	= MOD+Shift+plus
+bind[height_grow]	= MOD+Shift+dead_acute
+bind[move_left]		= MOD+aring
+bind[move_right]	= MOD+dead_diaeresis
+bind[move_up]		= MOD+Shift+aring
+bind[move_down]		= MOD+Shift+dead_diaeresis
+bind[name_workspace]	= MOD+Shift+minus
+bind[search_workspace]	= MOD+minus
 bind[search_win]	= MOD+f
