--- a/debian/control
+++ b/debian/control
@@ -1,20 +1,20 @@
-Source: scrotwm
+Source: spectrwm
 Section: x11
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
 Build-Depends: debhelper (>= 7), dpkg-dev (>= 1.16.1~), libx11-dev, libxt-dev, libxrandr-dev, libxtst-dev
 Standards-Version: 3.9.2
-Homepage: http://opensource.conformal.com/wiki/scrotwm
-Vcs-Git: git://anonscm.debian.org/collab-maint/scrotwm.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/scrotwm.git;a=summary
+Homepage: http://opensource.conformal.com/wiki/spectrwm
+Vcs-Git: git://anonscm.debian.org/collab-maint/spectrwm.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/spectrwm.git;a=summary
 
-Package: scrotwm
+Package: spectrwm
 Architecture: any
 Provides: x-window-manager
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: suckless-tools, xterm | x-terminal-emulator, xfonts-terminus
 Description: dynamic tiling window manager
- Scrotwm is a minimalistic window manager that tries to stay out of the way so
+ spectrwm is a minimalistic window manager that tries to stay out of the way so
  that valuable screen real estate can be used for much more important stuff.
  .
  It has sane defaults and does not require one to learn a language to do any
