--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,8 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/spectrwm.git;a=sum
 Package: spectrwm
 Architecture: any
 Provides: x-window-manager
+Replaces: scrotwm (<< 1.0.0-1~)
+Breaks: scrotwm (<< 1.0.0-1~)
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: suckless-tools, xterm | x-terminal-emulator, xfonts-terminus
 Description: dynamic tiling window manager
@@ -23,3 +25,17 @@ Description: dynamic tiling window manager
  .
  It was written by hackers for hackers and it strives to be small,
  compact and fast.
+
+Package: scrotwm
+Architecture: all
+Section: oldlibs
+Depends: spectrwm, ${misc:Depends}
+Description: dynamic tiling window manager (transitional package)
+ spectrwm is a minimalistic window manager that tries to stay out of the
+ way so that valuable screen real estate can be used for much more
+ important stuff.
+ .
+ scrotwm is the old name for spectrwm. This transitional package is
+ provided to ease upgrades; it also contains compatibility symlinks to
+ ensure upgrading doesn't break a working setup. It can be safely
+ deleted if backward compatibility with scrotwm is not needed.
