--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Description: dynamic tiling window manager
 Package: scrotwm
 Architecture: all
 Section: oldlibs
+Priority: extra
 Depends: spectrwm, ${misc:Depends}
 Description: dynamic tiling window manager (transitional package)
  spectrwm is a minimalistic window manager that tries to stay out of the
