--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ binary-arch: build
 	dh_installexamples
 	dh_installchangelogs 
 	dh_installdocs
-	dh_installwm spectrwm
+	dh_installwm
 	dh_strip
 	dh_compress
 	dh_link
