--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,7 @@ Package: scrotwm
 Architecture: all
 Section: oldlibs
 Priority: extra
-Pre-Depends: (>= 1.15.7.2~)
+Pre-Depends: dpkg (>= 1.15.7.2~)
 Depends: spectrwm, ${misc:Depends}
 Description: dynamic tiling window manager (transitional package)
  spectrwm is a minimalistic window manager that tries to stay out of the
