Improve patch handling.

--- a/debian/rules
+++ b/debian/rules
@@ -45,4 +45,22 @@ binary-arch: build
 	dh_md5sums
 	dh_builddeb
 
-.PHONY: build clean binary binary-indep binary-arch
+# Rebuild the series file by looking at the contents of the patches directory.
+#
+# Patches with names starting with D (Debian-specific) should be applied
+# after those with names starting with U (to be forwarded upstream).
+rebuild-series:
+	@( \
+		SERIES=debian/patches/series; \
+		echo "# To rebuild this file, use \`debian/rules $@'" \
+			> $${SERIES}; \
+		for patch in debian/patches/U*.diff debian/patches/D*.diff; \
+		do \
+			test -f "$${patch}" || continue; \
+			patch=$$(basename $${patch}); \
+			echo $${patch} \
+				>> $${SERIES}; \
+		done; \
+	)
+
+.PHONY: build clean binary binary-indep binary-arch rebuild-series
