--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,9 @@ Build-Depends: dpkg-dev (>= 1.16.1~),
                debhelper (>= 7),
                libx11-dev,
                libx11-xcb-dev,
+               libxrandr-dev,
+               libxt-dev,
+               libxtst-dev,
                libxcb1-dev,
                libxcb-icccm4-dev,
                libxcb-keysyms1-dev,
