Add Build-Depends on libxcursor-dev.

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: dpkg-dev (>= 1.16.1~),
                debhelper (>= 7),
                libx11-dev,
                libx11-xcb-dev,
+               libxcursor-dev,
                libxrandr-dev,
                libxt-dev,
                libxtst-dev,
