--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -21,17 +21,19 @@
 # bar_enabled		= 1
 # bar_border_width	= 1
 # bar_border[1]		= rgb:00/80/80
+# bar_border_unfocus[1]	= rgb:00/40/40
 # bar_color[1]		= black
 # bar_font_color[1]	= rgb:a0/a0/a0
 # bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
 # bar_action		= baraction.sh
-# bar_delay		= 1
 # bar_justify		= left
 # bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
 # clock_format		= %a %b %d %R %Z %Y
+# region_padding	= 0
+# tile_gap		= 0
 # title_name_enabled	= 0
 # title_class_enabled	= 0
 # window_name_enabled	= 0
