Imported Upstream version 2.2.0

--- a/linux/spectrwm.desktop
+++ b/linux/spectrwm.desktop
@@ -2,5 +2,5 @@
 Name=spectrwm
 Comment=The spectrwm window manager
 Type=Application
-Exec=/usr/bin/spectrwm
-TryExec=/usr/bin/spectrwm
+Exec=spectrwm
+TryExec=spectrwm
