--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -1,6 +1,6 @@
 # PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
 # http://opensource.conformal.com/cgi-bin/man-cgi?spectrwm
-# NOTE: all colors in this file are in hex! see XQueryColor for examples
+# NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
 
 # workspace_limit	= 22
 # focus_mode		= default
@@ -9,7 +9,7 @@
 # focus_default		= last
 # spawn_position		= next
 
-# window decoration
+# Window Decoration
 # border_width		= 1
 # color_focus		= red
 # color_unfocus		= rgb:88/88/88
@@ -17,7 +17,7 @@
 # Remove window border when bar is disabled and there is only one window in workspace
 # disable_border		= 1
 
-# bar settings
+# Bar Settings
 # bar_enabled		= 1
 # bar_border_width	= 1
 # bar_border[1]		= rgb:00/80/80
@@ -42,17 +42,11 @@
 
 # Spawn Applications
 # spawn_position	= last
-# program[term]		= xterm
-# program[screenshot_all]	= screenshot.sh full
-# program[screenshot_wind]	= screenshot.sh window
-# program[lock]		= xlock
-# program[initscr]	= initscreen.sh
-# program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
 
-# dialog box size ratio .3 >= r < 1
+# Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
 # dialog_ratio		= 0.6
 
-# Split a non-Xrandr dual head setup into one region per monitor
+# Split a non-RandR dual head setup into one region per monitor
 # (non-standard driver-based multihead is not seen by spectrwm)
 # region		= screen[1]:1280x1024+0+0
 # region		= screen[1]:1280x1024+1280+0
@@ -61,22 +55,42 @@
 # autorun		= ws[1]:xterm
 # autorun		= ws[2]:xombrero http://www.openbsd.org
 
-# workspace layout
+# Customize workspace layout at start
 # layout		= ws[1]:4:0:0:0:vertical
 # layout		= ws[2]:0:0:0:0:horizontal
 # layout		= ws[3]:0:0:0:0:fullscreen
 # layout		= ws[4]:4:0:0:0:vertical_flip
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
-# mod key, (windows key is Mod4) (apple key on OSX is Mod2)
+# Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
 # modkey = Mod1
 
-# Clear key bindings and load new key bindings from the specified file.
-# This allows you to load pre-defined key bindings for your keyboard layout.
+# This allows you to include pre-defined key bindings for your keyboard layout.
 # keyboard_mapping = ~/.spectrwm_us.conf
 
-# quirks
-# remove with: quirk[class:name] = NONE
+# PROGRAMS
+
+# Validated default programs:
+# program[lock]		= xlock
+# program[term]		= xterm
+# program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
+
+# To disable validation of the above, free the respective binding(s):
+# bind[]		= MOD+Shift+Delete	# disable lock
+# bind[]		= MOD+Shift+Enter	# disable term
+# bind[]		= MOD+p			# disable menu
+
+# Optional default programs that will only be validated if you override:
+# program[screenshot_all]	= screenshot.sh full	# optional
+# program[screenshot_wind]	= screenshot.sh window	# optional
+# program[initscr]	= initscreen.sh			# optional
+
+# EXAMPLE: Define 'firefox' action and bind to key.
+# program[firefox]	= firefox http://spectrwm.org/
+# bind[firefox]		= MOD+Shift+b
+
+# QUIRKS
+# Default quirks, remove with: quirk[class:name] = NONE
 # quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
 # quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 # quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
@@ -91,7 +105,3 @@
 # quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]				= FLOAT
-
-# EXAMPLE: define firefox program and bind to key
-# program[firefox]	= firefox http://spectrwm.org/
-# bind[firefox]		= MOD+Shift+b
