--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -13,6 +13,13 @@
 # border_width		= 1
 # color_focus		= red
 # color_unfocus		= rgb:88/88/88
+# region_padding	= 0
+# tile_gap		= 0
+
+# Region containment
+# Distance window must be dragged/resized beyond the region edge before it is
+# allowed outside the region.
+# boundary_width 		= 50
 
 # Remove window border when bar is disabled and there is only one window in workspace
 # disable_border		= 1
@@ -32,16 +39,11 @@
 # stack_enabled		= 1
 # clock_enabled		= 1
 # clock_format		= %a %b %d %R %Z %Y
-# region_padding	= 0
-# tile_gap		= 0
 # title_name_enabled	= 0
 # title_class_enabled	= 0
 # window_name_enabled	= 0
 # verbose_layout		= 1
 # urgent_enabled		= 1
-
-# Spawn Applications
-# spawn_position	= last
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
 # dialog_ratio		= 0.6
