Imported Upstream version 2.4.0

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,10 +7,13 @@ NOMAN=	yes
 SRCS=	swm_hack.c
 LIBDIR= ${X11BASE}/lib
 
+CC?= cc
+
 DEBUGLIBS= no
 NOPROFILE= yes
 
-CFLAGS+=-Wall -Wno-uninitialized -g -fPIC
+CFLAGS+= -std=c99 -Wmissing-prototypes -Wall -Wextra -Wshadow -Wno-uninitialized -g
+CFLAGS+= -fPIC
 CFLAGS+= -I${X11BASE}/include
 
 install:
