--- a/spectrwm_fr.conf
+++ b/spectrwm_fr.conf
@@ -19,6 +19,7 @@ bind[menu]		= MOD+p
 bind[quit]		= MOD+Shift+q
 bind[restart]		= MOD+q
 bind[focus_main]	= MOD+m
+bind[focus_urgent]	= MOD+u
 bind[ws_1]		= MOD+ampersand
 bind[ws_2]		= MOD+eacute
 bind[ws_3]		= MOD+quotedbl
