--- a/osx/Makefile
+++ b/osx/Makefile
@@ -1,15 +1,24 @@
+# To use homebrew instead of macports, uncomment the following three lines.
+#INCFLAGS+= -I/opt/X11/include
+#LDADD+=  -lX11 -lXcursor -lXft -L/opt/X11/lib
+#INCFLAGS+= -I/usr/local/Cellar/freetype/2.4.10/include/freetype2
+
+# To use homebrew instead of macports, comment out the following two lines.
 INCFLAGS+= -I/opt/local/include/freetype2 -I/opt/local/include
-CFLAGS+= -O2 -Wall -g -D_GNU_SOURCE -D__OSX__ -I. -I.. ${INCFLAGS}
-CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
 LDADD+=  -L/opt/local/lib -lX11 -lXcursor -lXft
+
 LDADD+=  -lxcb-keysyms -lxcb-util -lxcb-randr -lX11-xcb -lxcb-xtest -lxcb -lxcb-icccm
+
+CFLAGS+= -std=c99 -Wmissing-prototypes -Wall -Wextra -Wshadow -Wno-uninitialized -g
+CFLAGS+= -O2 -D_GNU_SOURCE -D__OSX__ -I. -I.. ${INCFLAGS}
+CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
 
 PREFIX?= /usr/local
 BINDIR?= $(PREFIX)/bin
 LIBDIR?= $(PREFIX)/lib
 MANDIR?= $(PREFIX)/share/man
 
-CC= gcc
+CC?= cc
 
 LVERS= $(shell . ../lib/shlib_version; echo $$major.$$minor)
 
@@ -30,7 +39,7 @@ spectrwm: spectrwm.o osx.o
 	$(CC) $(CFLAGS) -c -fpic -DPIC $+ -o $@
 
 libswmhack.so.$(LVERS): swm_hack.so
-	$(CC) -shared -fpic -o libswmhack.so.$(LVERS) $(LDADD) swm_hack.so
+	$(CC) $(LDFLAGS) -shared -fpic -o libswmhack.so.$(LVERS) swm_hack.so $(LDADD)
 # replace above line with this for OSX 10.5
 #	$(CC) -shared -bundle -fpic -o libswmhack.so.$(LVERS) $(LDADD) swm_hack.so
 
@@ -45,7 +54,9 @@ install: all
 	install -m 644 ../spectrwm_it.1 $(DESTDIR)$(MANDIR)/man1/spectrwm_it.1
 	install -m 644 ../spectrwm_pt.1 $(DESTDIR)$(MANDIR)/man1/spectrwm_pt.1
 	install -m 644 ../spectrwm_ru.1 $(DESTDIR)$(MANDIR)/man1/spectrwm_ru.1
-	ln -sf $(DESTDIR)$(BINDIR)/spectrwm $(DESTDIR)$(BINDIR)/scrotwm
+	ln -sf spectrwm $(DESTDIR)$(BINDIR)/scrotwm
+	ln -sf libswmhack.so.0.0 $(DESTDIR)$(LIBDIR)/libswmhack.so.0
+	ln -sf libswmhack.so.0.0 $(DESTDIR)$(LIBDIR)/libswmhack.so
 
 clean:
 	rm -f spectrwm *.o *.so libswmhack.so.* spectrwm.c swm_hack.c tree.h version.h
