--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -39,8 +39,9 @@
 # stack_enabled		= 1
 # clock_enabled		= 1
 # clock_format		= %a %b %d %R %Z %Y
-# title_name_enabled	= 0
-# title_class_enabled	= 0
+# iconic_enabled	= 0
+# window_class_enabled	= 0
+# window_instance_enabled	= 0
 # window_name_enabled	= 0
 # verbose_layout		= 1
 # urgent_enabled		= 1
@@ -75,7 +76,7 @@
 # Validated default programs:
 # program[lock]		= xlock
 # program[term]		= xterm
-# program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
+# program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
 
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
