--- a/osx/Makefile
+++ b/osx/Makefile
@@ -1,26 +1,30 @@
-# To use homebrew instead of macports, uncomment the following three lines.
-#INCFLAGS+= -I/opt/X11/include
-#LDADD+=  -lX11 -lXcursor -lXft -L/opt/X11/lib
-#INCFLAGS+= -I/usr/local/Cellar/freetype/2.4.10/include/freetype2
-
-# To use homebrew instead of macports, comment out the following two lines.
-INCFLAGS+= -I/opt/local/include/freetype2 -I/opt/local/include
-LDADD+=  -L/opt/local/lib -lX11 -lXcursor -lXft
-
-LDADD+=  -lxcb-keysyms -lxcb-util -lxcb-randr -lX11-xcb -lxcb-xtest -lxcb -lxcb-icccm
-
-CFLAGS+= -std=c99 -Wmissing-prototypes -Wall -Wextra -Wshadow -Wno-uninitialized -g
-CFLAGS+= -O2 -D_GNU_SOURCE -D__OSX__ -I. -I.. ${INCFLAGS}
-CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
-
 PREFIX?= /usr/local
 BINDIR?= $(PREFIX)/bin
 LIBDIR?= $(PREFIX)/lib
 MANDIR?= $(PREFIX)/share/man
 
-CC?= cc
+# To use xquartz, uncomment the following three lines.
+INCFLAGS+= -I/opt/X11/include -I/opt/X11/include/freetype2/
+LDADD+=  -L/opt/X11/lib -lX11 -lXcursor -lXft
+
+# To use homebrew, uncomment the following three lines.
+#INCFLAGS+= -I/opt/X11/include
+#LDADD+=  -lX11 -lXcursor -lXft -L/opt/X11/lib
+#INCFLAGS+= -I/usr/local/Cellar/freetype/2.5.0.1/include/freetype2
+
+# To use homebrew , comment out the following two lines.
+#INCFLAGS+= -I/opt/local/include/freetype2 -I/opt/local/include
+#LDADD+=  -L/opt/local/lib -lX11 -lXcursor -lXft
+
+LDADD+=  -lxcb-keysyms -lxcb-util -lxcb-randr -lX11-xcb -lxcb-xtest -lxcb -lxcb-icccm
 
 LVERS= $(shell . ../lib/shlib_version; echo $$major.$$minor)
+
+CFLAGS+= -std=c99 -Wmissing-prototypes -Wall -Wextra -Wshadow -Wno-uninitialized -g
+CFLAGS+= -O2 -D_GNU_SOURCE -D__OSX__ -I. -I.. ${INCFLAGS}
+CFLAGS+= -DSWM_LIB=\"$(LIBDIR)/libswmhack.so.$(LVERS)\"
+
+CC?= cc
 
 all: spectrwm libswmhack.so.$(LVERS)
 
