Imported Upstream version 2.6.0

--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -8,6 +8,7 @@
 # focus_close_wrap	= 1
 # focus_default		= last
 # spawn_position		= next
+# warp_pointer		= 1
 
 # Window Decoration
 # border_width		= 1
