Install x-window-manager alternative in debian/rules.

--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ binary-arch: build
 	dh_installexamples
 	dh_installchangelogs 
 	dh_installdocs
-	dh_installwm
+	dh_installwm /usr/bin/spectrwm
 	dh_strip
 	dh_compress
 	dh_link
